Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
Python segfaults if you implement a Flight server that returns a data stream but does not keep a reference to the underlying data source (the Table, RecordBatch, etc). The Flight bindings themselves do not keep a reference to the object, so the server will segfault as the memory has been reclaimed.
Attachments
Issue Links
- supercedes
-
ARROW-4573 [Python] Add Flight unit tests
-
- Resolved
-
- links to