ARROW-4796: [Flight/Python] Keep underlying Python object alive in FlightServerBase.do_get

Author: David Li <David.M.Li@twosigma.com>

Closes #3834 from lihalite/arrow-4796 and squashes the following commits:

942b9a708 <David Li> Keep underlying Python object alive in FlightServerBase.do_get